# discord-html

./: 1382931185189126294.html  README.md  main.py  pyproject.toml
bot/: actions.py  bot_config.py  config.py  config.yaml  dispatcher.py  main.py
discord_html/: config.yaml  parse.py  pyproject.toml
discord_html.egg-info/: SOURCES.txt  top_level.txt
discord_html/discord_html.egg-info/: PKG-INFO  SOURCES.txt
discord_html/parse.egg-info/: PKG-INFO  SOURCES.txt
parser/: parse.py
parser/markdown_to_html.egg-info/: PKG-INFO  SOURCES.txt
