[projet]
name = "discord-html"
version = "0.1.0"
description = "A parser that converts Discord-falvored markdown to HTML."
readme = "../README.md"
requires-python = ">=3.8"
authors = [
    { name = "Jacob Andres", email = "jacob@jacobandres.com" }
]
license = { text = "MIT" }
keywords = ["discord", "markdown", "html", "parser"]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
